13th v1.0.0 theming design, how to use and latest category search

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.baderproductions.filelist"
+        applicationId "com.baderproductions.fl"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
