--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "import-fresh": "^3.2.1",
     "react": "16.13.1",
     "react-native": "^0.63.2",
+    "react-native-collapsible": "^1.5.3",
     "react-native-elements": "^2.2.1",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fast-image": "^8.3.2",
