--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-native-community/clipboard": "^1.4.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.7",
+    "@react-native-firebase/app": "^8.4.6",
+    "@react-native-firebase/crashlytics": "^8.4.11",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/material-top-tabs": "^5.2.16",
