--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-native-fontawesome": "^0.2.5",
-    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/clipboard": "^1.4.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.7",
-    "@react-native-community/picker": "^1.8.1",
-    "@react-native-firebase/app": "^8.4.6",
-    "@react-native-firebase/crashlytics": "^8.4.11",
+    "@react-native-firebase/app": "^10.0.0",
+    "@react-native-firebase/crashlytics": "^10.0.0",
+    "@react-native-picker/picker": "^1.9.3",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/material-top-tabs": "^5.2.16",
@@ -29,6 +29,7 @@
     "axios": "^0.20.0",
     "cosmiconfig": "^6.0.0",
     "dedent": "^0.7.0",
+    "formik": "^2.2.5",
     "import-fresh": "^3.2.1",
     "react": "16.13.1",
     "react-native": "^0.63.2",
@@ -37,12 +38,13 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.10.1",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-skeleton-content-nonexpo": "^1.0.11",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.1",
@@ -51,7 +53,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "yup": "^0.31.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
