--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "^2.10.1",
     "react-native-skeleton-content-nonexpo": "^1.0.11",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^7.0.0",
