--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,6 +212,8 @@ dependencies {
 
     implementation "androidx.multidex:multidex:2.0.1"
 
+    compile project(':react-native-fs')
+
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     
     implementation 'com.google.firebase:firebase-crashlytics'
