--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "react-native-elements": "^3.1.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fast-image": "^8.3.4",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-orientation-locker": "^1.2.0",
     "react-native-paper": "^4.6.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
@@ -51,10 +53,12 @@
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.2.4",
     "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0",
     "typescript": "^4.1.3",
     "yup": "^0.32.8"
   },
