--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'filelist' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'Firebase/Analytics'
+
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
   target 'filelistTests' do
