--- a/ios/filelist.xcodeproj/xcshareddata/xcschemes/filelist.xcscheme
+++ b/ios/filelist.xcodeproj/xcshareddata/xcschemes/filelist.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "1240"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -83,6 +83,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Filelist Aoo"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
