--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "17.0.2",
     "react-native": "^0.64.0",
     "react-native-collapsible": "^1.6.0",
+    "react-native-device-info": "^8.1.3",
     "react-native-elements": "^3.4.1",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-fast-image": "^8.3.4",
