--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-orientation-locker": "^1.2.0",
+    "react-native-orientation-locker": "^1.4.0",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -64,11 +64,22 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.14.0",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/traverse": "^7.16.10",
+    "@babel/types": "^7.16.8",
+    "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.25.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-native": "^4.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-test-renderer": "17.0.2"
